# GnuPlotCpp

./: CMakeLists.txt  README.md  doc.Doxyfile  gnuplotcpp.Doxyfile
src/: CMakeLists.txt  CPlot2D.cpp  CPlot2D.h
test/: CMakeLists.txt  main.cpp
